# Render4D

./: CMakeLists.txt  README.md  main.cpp
shader/: fs.glsl  vs.glsl
shaders/: fs.glsl  fs_4d.glsl  vs.glsl  vs_4d.glsl
src/: aabbcollider.cpp  aabbcollider.h  camera.cpp  camera.h  collider.cpp  collider.h  hyperplane.cpp  hyperplane.h  object3d.cpp  object3d.h  object4d.cpp  object4d.h  player.cpp  player.h  renderable.cpp  renderable.h  rigidbody3d.cpp  rigidbody3d.h  scene.cpp  scene.h  shader.cpp  shader.h  slice.cpp  slice.h  solver.cpp  solver.h  spherecollider.h  tesseract.cpp  tesseract.h  transform3d.cpp  transform3d.h  transform4d.cpp  transform4d.h
